--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,5 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+kalima-platform/android/.idea/deploymentTargetSelector.xml
+kalima-platform/android/.idea/runConfigurations.xml
