--- a/kalima-platform/package.json
+++ b/kalima-platform/package.json
@@ -9,10 +9,17 @@
     "@capacitor/ios": "^7.0.1",
     "cra-template-pwa": "2.0.0",
     "daisyui": "^4.12.23",
+    "i18next": "^21.9.2",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
+    "react-daisyui": "^5.0.5",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.6",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
