--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+/build
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -128,5 +129,5 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-kalima-platform/android/.idea/deploymentTargetSelector.xml
-kalima-platform/android/.idea/runConfigurations.xml
+/build
+/android
