--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -9,8 +9,16 @@
     "@capacitor/ios": "^7.0.1",
     "cra-template-pwa": "2.0.0",
     "daisyui": "^4.12.23",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
+    "lucide-react": "^0.479.0",
     "react": "^18.2.0",
+    "react-daisyui": "^5.0.5",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1"
   },
@@ -37,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^5.8.2"
   }
 }
