--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -7,6 +7,7 @@
     "@capacitor/cli": "^7.0.1",
     "@capacitor/core": "^7.0.1",
     "@capacitor/ios": "^7.0.1",
+    "axios": "^1.8.2",
     "cra-template-pwa": "2.0.0",
     "daisyui": "^4.12.23",
     "i18next": "^24.2.2",
