--- a/kalima-platform/frontend/Dockerfile
+++ b/kalima-platform/frontend/Dockerfile
@@ -8,13 +8,13 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm install --force
 
 # Copy all frontend files
 COPY . . 
 
 # Build the app
-RUN npm run build && ls -la dist/  
+RUN npm run build 
  
 # Production stage
 FROM nginx:alpine
@@ -23,7 +23,7 @@ FROM nginx:alpine
 RUN rm -rf /usr/share/nginx/html/*
 
 # Copy static assets from builder stage
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build /app/build /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Verify the files are copied
