--- a/kalima-platform/docker-compose.yml
+++ b/kalima-platform/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "8088:80"
       - "4448:443"
     environment:
-      - VITE_API_URL=${BACKEND_URL}
+      - REACT_APP_BASE_URL=${REACT_APP_BASE_URL}
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
