--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-"start:prod": "node server.js"
+    "start:prod": "node server.js",
+    "dev": "node server.js"
   },
   "keywords": [],
   "author": "",
