--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.11.0",
     "mongoose-sequence": "^6.0.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
