--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
@@ -23,7 +25,9 @@
     "mongoose": "^8.11.0",
     "mongoose-sequence": "^6.0.1",
     "morgan": "^1.10.0",
-    "uuid": "^11.1.0"
+    "multer": "^1.4.5-lts.2",
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
