--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.11.0",
     "mongoose-sequence": "^6.0.1",
     "morgan": "^1.10.0",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
