--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -8,6 +8,7 @@
     "@capacitor/core": "^7.0.1",
     "@capacitor/ios": "^7.0.1",
     "axios": "^1.8.2",
+    "chart.js": "^4.4.8",
     "cra-template-pwa": "2.0.0",
     "daisyui": "^4.12.23",
     "framer-motion": "^12.5.0",
@@ -16,13 +17,15 @@
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.479.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-daisyui": "^5.0.5",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "recharts": "^2.15.2"
   },
   "scripts": {
     "start": "react-scripts start",
