--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -24,8 +24,7 @@
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1",
-    "recharts": "^2.15.2"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
