Fixes and linking (not Final)

--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -30,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:android": "env-cmd -f .env.development react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "typescript": "^5.8.2"
   }
 }
