--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "socket.io": "^4.8.1",
+    "sparse-bitfield": "^3.0.3",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
