--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.18.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.11.0",
     "mongoose-sequence": "^6.0.1",
