--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -15,6 +15,7 @@
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
