--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -25,7 +25,7 @@
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
