--- a/kalima-platform/package.json
+++ b/kalima-platform/package.json
@@ -7,18 +7,23 @@
     "@capacitor/cli": "^7.0.1",
     "@capacitor/core": "^7.0.1",
     "@capacitor/ios": "^7.0.1",
+    "axios": "^1.8.4",
+    "cloudinary": "^2.6.0",
     "cra-template-pwa": "2.0.0",
+    "csv-parser": "^3.2.0",
     "daisyui": "^4.12.23",
     "i18next": "^21.9.2",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
+    "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "react": "^18.2.0",
     "react-daisyui": "^5.0.5",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "typescript": "^4.9.5"
   },
   "scripts": {
