--- a/kalima-platform/package.json
+++ b/kalima-platform/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^3.0.1",
+    "react-webcam-barcode-scanner": "^0.0.2",
     "typescript": "^4.9.5"
   },
   "scripts": {
