--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor-community/barcode-scanner": "^4.0.1",
     "@capacitor/android": "^7.0.1",
     "@capacitor/cli": "^7.0.1",
-    "@capacitor/core": "^7.0.1",
+    "@capacitor/core": "^7.2.0",
     "@capacitor/ios": "^7.0.1",
     "axios": "^1.8.2",
     "chart.js": "^4.4.8",
@@ -24,6 +25,7 @@
     "react-feather": "^2.0.10",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
+    "react-qr-barcode-scanner": "^2.1.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1"
   },
@@ -32,7 +34,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:android": "env-cmd -f .env.development react-scripts build"
+    "build:android": "env-cmd -f .env.android react-scripts build && npx cap copy android"
   },
   "eslintConfig": {
     "extends": [
