--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@capacitor/android": "^7.0.1",
     "@capacitor/cli": "^7.0.1",
-    "@capacitor/core": "^7.0.1",
     "@capacitor/ios": "^7.0.1",
     "axios": "^1.8.2",
     "chart.js": "^4.4.8",
@@ -32,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:android": "env-cmd -f .env.development react-scripts build"
+    "build:android": "env-cmd -f .env.android react-scripts build && npx cap copy android"
   },
   "eslintConfig": {
     "extends": [
