--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor-mlkit/barcode-scanning": "^7.2.1",
     "@capacitor/android": "^7.2.0",
     "@capacitor/cli": "^7.2.0",
     "@capacitor/core": "^7.2.0",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
+    "@zxing/browser": "^0.1.5",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "daisyui": "^5.0.28",
@@ -17,14 +19,16 @@
     "i18next-http-backend": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
-    "react": "^19.1.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
     "tailwindcss": "^4.1.4",
+    "video.js": "^8.22.0",
+    "videojs-youtube": "^3.0.1",
     "vite-plugin-pwa": "^1.0.0"
   },
   "scripts": {
@@ -54,7 +58,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.4.1",
     "env-cmd": "^10.1.0",
-    "typescript": "^5.8.2",
+    "typescript": "^5.8.3",
     "vite": "^6.3.3"
   }
 }
