--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
@@ -32,6 +33,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.10.1",
+    "resend": "^4.4.1",
+    "sendgrid": "^5.2.3",
     "socket.io": "^4.8.1",
     "sparse-bitfield": "^3.0.3",
     "uuid": "^11.1.0",
