--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -10,6 +10,7 @@
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
     "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "daisyui": "^5.0.28",
