--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -9,8 +9,6 @@
     "@capacitor/core": "^7.2.0",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
-    "@zxing/browser": "^0.1.5",
-    "@zxing/library": "^0.21.3",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "daisyui": "^5.0.28",
@@ -27,6 +25,7 @@
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
+    "scanbot-web-sdk": "^7.1.0",
     "tailwindcss": "^4.1.4",
     "video.js": "^8.22.0",
     "videojs-youtube": "^3.0.1",
