fixing themes, adding more themes, and improving UI and Responsiveness

--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@capacitor-mlkit/barcode-scanning": "^7.2.1",
     "@capacitor/android": "^7.2.0",
     "@capacitor/cli": "^7.2.0",
     "@capacitor/core": "^7.2.0",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "capacitor-plugin-scanbot-barcode-scanner-sdk": "^6.1.0",
     "chart.js": "^4.4.9",
     "daisyui": "^5.0.28",
     "framer-motion": "^12.9.2",
