--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -16,6 +16,7 @@
     "i18next": "^25.0.1",
     "i18next-browser-languagedetector": "^8.0.5",
     "i18next-http-backend": "^3.0.2",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
     "react": "^18.2.0",
