--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -12,12 +12,14 @@
     "chart.js": "^4.4.9",
     "daisyui": "^5.0.28",
     "framer-motion": "^12.9.2",
+    "html5-qrcode": "^2.3.8",
     "i18next": "^25.0.1",
     "i18next-browser-languagedetector": "^8.0.5",
     "i18next-http-backend": "^3.0.2",
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
@@ -25,7 +27,6 @@
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
-    "scanbot-web-sdk": "^7.1.0",
     "tailwindcss": "^4.1.4",
     "video.js": "^8.22.0",
     "videojs-youtube": "^3.0.1",
