--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -8,6 +8,7 @@
     "@capacitor/core": "^7.2.0",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
+    "@vidstack/react": "^1.12.13",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "daisyui": "^5.0.28",
@@ -19,6 +20,7 @@
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
+    "plyr": "^3.7.8",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
@@ -28,8 +30,6 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
     "tailwindcss": "^4.1.4",
-    "video.js": "^8.22.0",
-    "videojs-youtube": "^3.0.1",
     "vite-plugin-pwa": "^1.0.0"
   },
   "scripts": {
