--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -26,6 +26,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
