Enhance Docker configuration: add uploads volume and increase client max body size to 120M

--- a/kalima-platform/docker-compose.yml
+++ b/kalima-platform/docker-compose.yml
@@ -34,7 +34,8 @@ services:
       - EMAIL_FROM=${EMAIL_FROM}
     networks:
       - app-network
+    volumes:
+      - uploads:/app/uploads
 
-networks:
-  app-network:
-    driver: bridge
+volumes:
+  uploads:
