--- a/kalima-platform/docker-compose.yml
+++ b/kalima-platform/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     networks:
       - app-network
     volumes:
-      - uploads:/app/public/uploads
+      - uploads:/app/uploads
 
 networks:
   app-network:
