--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -30,6 +30,8 @@
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
+    "react-simple-star-rating": "^5.1.7",
+    "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.4",
     "vite-plugin-pwa": "^1.0.0"
