--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -34,7 +34,8 @@
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.4",
-    "vite-plugin-pwa": "^1.0.0"
+  "vite-plugin-pwa": "^1.0.0",
+  "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "vite",
