--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "luxon": "^3.7.2",
     "mongoose": "^8.11.0",
     "mongoose-sequence": "^6.0.1",
     "morgan": "^1.10.0",
