feat: water mark image and payment method

--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -8,7 +8,8 @@
     "start:prod": "cross-env NODE_OPTIONS=--no-warnings=DEP0040 node server.js",
     "dev": "cross-env NODE_OPTIONS=--no-warnings=DEP0040 node server.js",
     "seed": "node scripts/seed.js",
-    "seed:governments": "node utils/seeds/seedGovernments.js"
+    "seed:governments": "node utils/seeds/seedGovernments.js",
+    "cleanup:watermarks": "node scripts/cleanupOldWatermarks.js"
   },
   "keywords": [],
   "author": "",
