add old db ofr now

--- a/kalima-platform/frontend/nginx.conf
+++ b/kalima-platform/frontend/nginx.conf
@@ -1,7 +1,7 @@
 # Docker Nginx Config (no SSL)
 server {
     listen 80;
-    server_name kalima.mavoid.com;
+    server_name dev.kalima-edu.com;
 
     root /usr/share/nginx/html;
     index index.html;
