--- a/kalima-platform/dev.docker-compose.yml
+++ b/kalima-platform/dev.docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - "5034:5000"
     environment:
       - NODE_ENV=development
-      - DATABASE_URI=URI HERE
+      - DATABASE_URI=mongodb+srv://Kalima:6etSYaM16OA6zt@kalima.2cyib.mongodb.net/?retryWrites=true&w=majority&appName=Kalima
       - PORT=5000
       - REFRESH_TOKEN_SECRET=REFRESHSECRET44
       - ACCESS_TOKEN_SECRET=ACCESSSECRET44
