--- a/kalima-platform/frontend/nginx.conf
+++ b/kalima-platform/frontend/nginx.conf
@@ -8,7 +8,7 @@ server {
 
     # API location
     location /api/v1/ {
-        proxy_pass http://backend:5000;
+        proxy_pass http://dev-backend:5000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -25,7 +25,7 @@ server {
 
     # Uploads location - proxy to backend
     location /uploads/ {
-        proxy_pass http://backend:5000/uploads/;
+        proxy_pass http://dev-backend:5000/uploads/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
