--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -33,6 +33,7 @@
     "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.4",
     "vite-plugin-pwa": "^1.0.0",
     "xlsx": "^0.18.5"
