Add number of pruchases and total paid amount for users that info will be displayed in admin dashboard and purtchases list along user data || script to add new fields to old accounts an agregate over it to calculate old users || now the empolyees has the ability to remove an item from a purchase that will automaticly recalculate the total of the purcase and updates user purcase history and users TotalSpentAmount numberOfPurchases

--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -10,7 +10,8 @@
     "seed": "node scripts/seed.js",
     "seed:governments": "node utils/seeds/seedGovernments.js",
     "cleanup:watermarks": "node scripts/cleanupOldWatermarks.js",
-    "backfill:monthly-count": "node scripts/backfillMonthlyConfirmedCount.js"
+    "backfill:monthly-count": "node scripts/backfillMonthlyConfirmedCount.js",
+    "backfill:user-purchase-stats": "node scripts/migrateUserPurchaseStats.js"
   },
   "keywords": [],
   "author": "",
