--- a/kalima-platform/docker-compose.yml
+++ b/kalima-platform/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       - mongodb
 
   mongodb:
-    image: mongo:7.0
+    image: mongo:latest
     container_name: kalima-mongodb
     restart: always
     ports:
