--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -19,6 +19,7 @@
     "i18next-http-backend": "^3.0.2",
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.553.0",
     "plyr": "^3.7.8",
     "qrcode": "^1.5.4",
