--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -45,6 +45,7 @@
     "nodemailer": "^6.10.1",
     "resend": "^4.4.1",
     "sendgrid": "^5.2.3",
+    "sharp": "^0.34.5",
     "socket.io": "^4.8.1",
     "sparse-bitfield": "^3.0.3",
     "uuid": "^11.1.0",
