--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: 
       context: ./frontend
       dockerfile: Dockerfile
+    args:
+      VITE_API_URL: ${VITE_API_URL}
     ports:
       - "8081:80"
       - "4445:443"
@@ -19,6 +21,8 @@ services:
     build: 
       context: ./backend
       dockerfile: Dockerfile
+    args:
+      VITE_API_URL: ${VITE_API_URL}
     ports:
       - "5033:5000"
     environment:
