--- a/kalima-platform/frontend/Dockerfile
+++ b/kalima-platform/frontend/Dockerfile
@@ -13,6 +13,10 @@ RUN npm install --force
 # Copy all frontend files
 COPY . . 
 
+# Build-time env for Vite
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 # Build the app
 RUN npm run build 
  
@@ -23,7 +27,7 @@ FROM nginx:alpine
 RUN rm -rf /usr/share/nginx/html/*
 
 # Copy static assets from builder stage
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Verify the files are copied
