--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -39,6 +39,7 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
+    "lint": "eslint .",
     "start": "vite",
     "build": "vite build",
     "serve": "vite preview",
@@ -63,8 +64,12 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@vitejs/plugin-react": "^4.4.1",
     "env-cmd": "^10.1.0",
+    "eslint": "^9.39.2",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-plugin-import": "^2.32.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.3"
   }
