--- a/kalima-platform/package.json
+++ b/kalima-platform/package.json
@@ -51,6 +51,8 @@
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-plugin-import": "^2.32.0",
     "typescript": "^5.8.2"
   }
 }
