--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - "5037:5000"
     environment:
       - NODE_ENV=development
+      - RESEND_API_KEY=${RESEND_API_KEY} 
+      - EMAIL_FROM=${EMAIL_FROM}
       - DATABASE_URI=${DATABASE_URI}
       - PORT=${PORT}
       - REFRESH_TOKEN_SECRET=${REFRESH_TOKEN_SECRET} 
