--- a/kalima-platform/frontend/nginx.conf
+++ b/kalima-platform/frontend/nginx.conf
@@ -23,6 +23,15 @@ server {
         client_max_body_size 100M;
     }
 
+    # Uploads location - proxy to backend
+    location /uploads/ {
+        proxy_pass http://backend:5000/uploads/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Frontend routes
     location / {
         try_files $uri $uri/ /index.html;
