--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -27,6 +27,7 @@
     "i18next-http-backend": "^3.0.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.4",
