--- a/kalima-platform/frontend/package.json
+++ b/kalima-platform/frontend/package.json
@@ -24,6 +24,7 @@
     "animejs": "^4.3.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
