feat(cart): implement per-item coupon support in v2
- Updated cart and cart purchase models to include per-item couponCode and discount fields.
- Modified price calculation logic to account for per-item discounts.
- Enhanced cart management routes to support applying and removing coupons at the item level.
- Updated README documentation to reflect changes in API structure and functionality.
- Added new helper functions for managing cart totals and coupon application.
- Implemented new routes for v2 cart management and cart purchases.
- Refactored existing cart and purchase logic to accommodate new coupon handling.

--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -11,7 +11,8 @@
     "seed:governments": "node utils/seeds/seedGovernments.js",
     "cleanup:watermarks": "node scripts/cleanupOldWatermarks.js",
     "backfill:monthly-count": "node scripts/backfillMonthlyConfirmedCount.js",
-    "backfill:user-purchase-stats": "node scripts/migrateUserPurchaseStats.js"
+    "backfill:user-purchase-stats": "node scripts/migrateUserPurchaseStats.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -52,6 +53,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9"
   }
 }
