--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^7.3.0",
     "@sendgrid/mail": "^8.1.5",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
@@ -32,6 +33,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
+    "firebase-admin": "^13.6.1",
     "googleapis": "^148.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
@@ -44,6 +46,8 @@
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.1",
+    "pg": "^8.18.0",
+    "prisma": "^7.3.0",
     "resend": "^4.4.1",
     "sendgrid": "^5.2.3",
     "sharp": "^0.34.5",
@@ -53,7 +57,10 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/node": "^25.2.3",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
