--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -22,6 +22,7 @@
     "@sendgrid/mail": "^8.1.5",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.3",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -29,12 +30,14 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "firebase-admin": "^13.6.1",
     "googleapis": "^148.0.0",
+    "http-errors": "^2.0.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -57,6 +60,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/http-errors": "^2.0.5",
     "@types/node": "^25.2.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
