--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^7.3.0",
+    "@prisma/client": "^7.4.0",
     "@sendgrid/mail": "^8.1.5",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
@@ -39,7 +39,7 @@
     "googleapis": "^148.0.0",
     "http-errors": "^2.0.1",
     "joi": "^17.13.3",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "luxon": "^3.7.2",
@@ -47,10 +47,9 @@
     "mongoose-sequence": "^6.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
-    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.1",
     "pg": "^8.18.0",
-    "prisma": "^7.3.0",
+    "prisma": "^7.4.0",
     "resend": "^4.4.1",
     "sendgrid": "^5.2.3",
     "sharp": "^0.34.5",
@@ -60,7 +59,10 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/http-errors": "^2.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.2.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
