--- a/kalima-platform/backend/package.json
+++ b/kalima-platform/backend/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "cross-env NODE_OPTIONS=--no-warnings=DEP0040 nodemon server.js",
-    "start:prod": "cross-env NODE_OPTIONS=--no-warnings=DEP0040 node server.js",
-    "dev": "cross-env NODE_OPTIONS=--no-warnings=DEP0040 node server.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev:legacy": "cross-env NODE_OPTIONS=--no-warnings=DEP0040 nodemon server.js",
+    "dev:all": "concurrently \"npm:dev\" \"npm:dev:legacy\"",
+    "build": "tsc",
+    "start": "node dist/src/server.js",
+    "start:prod": "cross-env NODE_OPTIONS=--no-warnings=DEP0040 node dist/src/server.js",
     "seed": "node scripts/seed.js",
     "seed:governments": "node utils/seeds/seedGovernments.js",
     "cleanup:watermarks": "node scripts/cleanupOldWatermarks.js",
@@ -22,6 +25,7 @@
     "@sendgrid/mail": "^8.1.5",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
@@ -29,7 +33,7 @@
     "cross-env": "^7.0.3",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "express": "^4.22.1",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
@@ -47,9 +51,11 @@
     "mongoose-sequence": "^6.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.1",
     "pg": "^8.18.0",
     "prisma": "^7.4.0",
+    "reflect-metadata": "^0.2.2",
     "resend": "^4.4.1",
     "sendgrid": "^5.2.3",
     "sharp": "^0.34.5",
@@ -61,12 +67,15 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.10",
+    "@types/express": "^5.0.6",
     "@types/http-errors": "^2.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.2.3",
+    "concurrently": "^9.2.1",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.9",
+    "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
 }
