--- a/kalima-platform/backend/tsconfig.json
+++ b/kalima-platform/backend/tsconfig.json
@@ -2,13 +2,30 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "rootDir": "src",
+
+    "rootDir": ".",               
     "outDir": "dist",
-    "strict": true,
+
+    "strict": false,              
+
     "esModuleInterop": true,
     "allowJs": true,
-    "checkJs": false
+    "checkJs": false,
+
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src/**/*",
+    "routes/**/*",
+    "controllers/**/*",
+    "models/**/*",
+    "middleware/**/*",
+    "*.ts",
+    "*.js"
+  ],
+  "exclude": ["node_modules", "dist"]
 }
